fixed profile alignment when resized

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -397,10 +397,8 @@ body {
   display: flex;
   flex-direction: column;
   position: absolute;
-  left: 30%;
-  right: 30%;
   top: 50px;
-  width:460px;
+  width:440px;
   height: 100%; 
   background-color: white;
   opacity:0; 
@@ -408,7 +406,6 @@ body {
   transition: opacity 0.3s ease, visibility 0.3s ease;
   box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Add visual depth */
   border-radius: 4px;
-
 }
 
 #similar-result-container.show{
